--- a/Sesame Data Analysis.ipynb
+++ b/Sesame Data Analysis.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
@@ -310,7 +310,7 @@
        "20  3300.00  1980.0  1980.0  1980.0  2200.00  1370.00   1815.00  1653.0"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,12 +467,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# for i in range(8):\n",
-    "#     globals()['{}_base'.format(Area_list[i])] = Area_list[i][0]\n",
     "Jeju_base = Jeju_data[0]\n",
     "Seoul_base = Seoul_data[0]\n",
     "Daegu_base = Daegu_data[0]\n",
@@ -485,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,94 +692,12 @@
     "\n",
     "#Daegu\n",
     "Rising_Term_list.append(0)\n",
-    "Stabilize_Term_list.append(0)\n",
-    "\n",
-    "# if Sejong_Rising == True:\n",
-    "#     Rising_Term_list.append(Sejong_Max_Time - Sejong_Rising_Time + 1)\n",
-    "# if Sejong_Stabilize == True:\n",
-    "#     Stabilize_Term_list.append(Sejong_Stabilize_Time - Sejong_Rising_Time + 1)\n",
-    "\n",
-    "# if AVG_Rising == True:\n",
-    "#     Rising_Term_list.append(AVG_Max_Time - AVG_Rising_Time + 1)\n",
-    "# if AVG_Stabilize == True:\n",
-    "#     Stabilize_Term_list.append(AVG_Stabilize_Time - AVG_Rising_Time + 1)"
+    "Stabilize_Term_list.append(0)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10 4 14 0 0\n",
-      "1 0 10 0 0\n",
-      "1 0 10 0 0\n",
-      "10 7 11 0 0\n",
-      "14 13 14 0 0\n",
-      "10 7 10 0 0\n"
-     ]
-    }
-   ],
-   "source": [
-    "Seoul_Stabilize_Term = 0\n",
-    "Daegu_Stabilize_Term = 0\n",
-    "\n",
-    "print(Jeju_Max_Time, Jeju_Rising_Time, Jeju_Stabilize_Time, Jeju_Rising_Term, Jeju_Stabilize_Term)\n",
-    "print(Seoul_Max_Time, Seoul_Rising_Time, Seoul_Stabilize_Time, Seoul_Rising_Term, Seoul_Stabilize_Term)\n",
-    "print(Daegu_Max_Time, Daegu_Rising_Time, Daegu_Stabilize_Time, Daegu_Rising_Term, Daegu_Stabilize_Term)\n",
-    "print(Jeonju_Max_Time, Jeonju_Rising_Time, Jeonju_Stabilize_Time, Jeonju_Rising_Term, Jeonju_Stabilize_Term)\n",
-    "print(Gwangju_Max_Time, Gwangju_Rising_Time, Gwangju_Stabilize_Time, Gwangju_Rising_Term, Gwangju_Stabilize_Term)\n",
-    "# print(Sejong_Max_Time, Sejong_Rising_Time, Sejong_Stabilize_Time, Sejong_Rising_Term, Sejong_Stabilize_Term)\n",
-    "print(Changwon_Max_Time, Changwon_Rising_Time, Changwon_Stabilize_Time, Changwon_Rising_Term, Changwon_Stabilize_Term)\n",
-    "# print(AVG_Max_Time, AVG_Rising_Time, AVG_Stabilize_Time, AVG_Rising_Term, AVG_Stabilize_Term)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[7, 4, 4, 2, 0, 0]"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Rising_Term_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[11, 5, 4, 2, 0, 0]"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Stabilize_Term_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -825,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -834,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
